--- a/_config.yaml
+++ b/_config.yaml
@@ -10,3 +10,6 @@ kramdown:
 collections:
   pages:
     output: true # This ensures the pages will be generated in the site
+  others:
+    output: true # This ensures the pages will be generated in the site
+
